Ignore automatically generated directory
Not sure what this is for, or why it picked that directory, but it flooded my console. I'm thinking it's some error report since I was trying to build while cmake was still generating the project.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ src/.vs
 src/CMakeSettings.json
 src/release
 *.pyc
+# Don't know why files were written here, but they aren't necessary
+/src/Cpp/exceptions/out/build/x64-Debug 
