Added cost_algorithms sources with stubs to C++/CInterface, with edited CMakeLists.txt
Added cost_algorithms.h and cost_algorithms.cpp to
src/Cpp/spatialstructures/src

and edited src/Cpp/spatialstructures/CMakeLists.txt for these new files.
Also added CalculateCrossSlope stubs in said .h/.cpp files,
as well as stubs for the CInterface header/source for spatialstructures_C.

Finally, added test stub for CalculateCrossSlope in tests/src/SpatialStructures.cpp.

--- a/src/Cpp/spatialstructures/CMakeLists.txt
+++ b/src/Cpp/spatialstructures/CMakeLists.txt
@@ -11,12 +11,16 @@ target_sources(
 		src/node.cpp
 		src/path.cpp
 		src/graph.cpp
+
+		src/cost_algorithms.cpp
 		
 		src/Constants.h
 		src/Edge.h
 		src/node.h
 		src/path.h
 		src/graph.h
+
+		src/cost_algorithms.h
 	)
 
 target_link_libraries(
