CostAlgorithms.cpp for tests in CostAlgorithms. Tests for Node attributes
CMakeLists.txt was modified to accomodate CostAlgorithms.cpp,
all unit tests for CostAlgorithms will now go here.

All unit tests for Node attributes (C++/CInterface) completed.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -433,6 +433,7 @@ if(HumanFactors_EnableTests)
 					${C_TEST_DRIVER_DIR}/VisibilityGraph.cpp
 					${C_TEST_DRIVER_DIR}/ViewAnalysis.cpp
 					${C_TEST_DRIVER_DIR}/PathFinding.cpp
+					${C_TEST_DRIVER_DIR}/CostAlgorithms.cpp
 			)
 	elseif(${HumanFactors_Config} STREQUAL "RayTracer")
 		target_sources(
