Add a new file for common performance testing types
Future functions and types useful for performance should be created here. This should reduce the complexity of creating new performance tests.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -399,6 +399,7 @@ if(HumanFactors_EnableTests)
 					${C_TEST_DRIVER_DIR}/VisibilityGraph.cpp
 					${C_TEST_DRIVER_DIR}/ViewAnalysis.cpp
 					${C_TEST_DRIVER_DIR}/PathFinding.cpp
+					${C_TEST_DRIVER_DIR}/performance_testing.h
 			)
 	elseif(${HumanFactors_Config} STREQUAL "RayTracer")
 		target_sources(
