--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-﻿cmake_minimum_required (VERSION 3.8)
+cmake_minimum_required (VERSION 3.8)
 
 # Paths
 set(PYTHON_PACKAGE_DIR "Python")
@@ -9,21 +9,20 @@ set(C_TEST_DRIVER_DIR "Cpp/tests/src")
 set(DEPENDENCY_BINARIES
 		"${CMAKE_SOURCE_DIR}/external/Embree/bin/tbb.dll" 
 		"${CMAKE_SOURCE_DIR}/external/Embree/bin/embree3.dll"
-		"${CMAKE_SOURCE_DIR}/external/Microsoft/Release/msvcp140.dll"
-		"${CMAKE_SOURCE_DIR}/external/Microsoft/Release/vcruntime140.dll"
+		"${CMAKE_SOURCE_DIR}/external/Microsoft/cpp/Release/msvcp140.dll"
+		"${CMAKE_SOURCE_DIR}/external/Microsoft/cpp/Release/vcruntime140.dll"
 )
 
-
 set(DEBUG_DEPENDENCY_BINARIES
-	"${CMAKE_SOURCE_DIR}/external/Microsoft/Debug/vcruntime140_1d.dll"
-	"${CMAKE_SOURCE_DIR}/external/Microsoft/Debug/vcruntime140d.dll"
-	"${CMAKE_SOURCE_DIR}/external/Microsoft/Debug/vcomp140d.dll"
-	"${CMAKE_SOURCE_DIR}/external/Microsoft/Debug/msvcp140d.dll"
+	"${CMAKE_SOURCE_DIR}/external/Microsoft/cpp/Debug/vcruntime140_1d.dll"
+	"${CMAKE_SOURCE_DIR}/external/Microsoft/cpp/Debug/vcruntime140d.dll"
+	"${CMAKE_SOURCE_DIR}/external/Microsoft/cpp/Debug/vcomp140d.dll"
+	"${CMAKE_SOURCE_DIR}/external/Microsoft/cpp/Debug/msvcp140d.dll"
 )
 
 set(RELEASE_DEPENDENCY_BINARIES
-	"${CMAKE_SOURCE_DIR}/external/Microsoft/Release/vcruntime140_1.dll"
-	"${CMAKE_SOURCE_DIR}/external/Microsoft/Release/vcomp140.dll"
+	"${CMAKE_SOURCE_DIR}/external/Microsoft/cpp/Release/vcruntime140_1.dll"
+	"${CMAKE_SOURCE_DIR}/external/Microsoft/cpp/Release/vcomp140.dll"
 )
 
 set(HF_SOURCES)
