Add C# depends. Install to bin folder if C# support is enabled.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -25,6 +25,12 @@ set(RELEASE_DEPENDENCY_BINARIES
 	"${CMAKE_SOURCE_DIR}/external/Microsoft/cpp/Release/vcomp140.dll"
 )
 
+set(CSHARP_DEPENDENCY_BINARIES
+	"${CMAKE_SOURCE_DIR}/external/Microsoft/csharp/System.Buffers.dll"
+	"${CMAKE_SOURCE_DIR}/external/Microsoft/csharp/System.Memory.dll"
+	"${CMAKE_SOURCE_DIR}/external/Microsoft/csharp/System.Runtime.CompilerServices.Unsafe.dll"
+)
+
 set(HF_SOURCES)
 
 
@@ -633,6 +639,7 @@ if (HumanFactors_EnableCSharp)
 			"${CMAKE_CURRENT_SOURCE_DIR}/${PYTHON_PACKAGE_DIR}/humanfactorspy/Example Models"
 			"${CMAKE_CURRENT_BINARY_DIR}/CSharp/$<CONFIGURATION>/ExampleModels"
 	)
+	install (FILES ${CSHARP_DEPENDENCY_BINARIES} DESTINATION bin)
 endif()
 
 
