--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ src/release
 *.pyc
 # Don't know why files were written here, but they aren't necessary
 /src/Cpp/exceptions/out/build/x64-Debug 
+build/Python/.vscode
