--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ src/release
 # Don't know why files were written here, but they aren't necessary
 /src/Cpp/exceptions/out/build/x64-Debug 
 build/Python/.vscode
+src/Python/.vscode
