--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -406,6 +406,7 @@ if(HumanFactors_EnableTests)
 					${C_TEST_DRIVER_DIR}/PathFinding.cpp
 					${C_TEST_DRIVER_DIR}/performance_testing.h
 					${C_TEST_DRIVER_DIR}/GraphAlgorithms.cpp
+					${C_TEST_DRIVER_DIR}/CostAlgorithms.cpp
 			)
 	elseif(${HumanFactors_Config} STREQUAL "RayTracer")
 		target_sources(
