Simplified project folder structure. See description.
The end result for this first merge request should be one .cpp file --
so I have simplified the folder structure such that:
- One .sln for all examples
- Each example will have one driver source file.

--- a/Sample Usage/AnalysisCInterfaceSampleUsage/AnalysisCInterfaceSampleUsage.vcxproj.filters
+++ b/Sample Usage/AnalysisCInterfaceSampleUsage/AnalysisCInterfaceSampleUsage.vcxproj.filters
@@ -15,10 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="AnalysisCInterfaceSampleUsage.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="test_raycasting.cpp">
+    <ClCompile Include="Sample_Raycasting.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
