--- a/Sample Usage/AnalysisCInterfaceSampleUsage/AnalysisCInterfaceSampleUsage.vcxproj
+++ b/Sample Usage/AnalysisCInterfaceSampleUsage/AnalysisCInterfaceSampleUsage.vcxproj
@@ -24,6 +24,7 @@
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>AnalysisCInterfaceSampleUsage</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Sample_Raycasting</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -148,8 +149,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="AnalysisCInterfaceSampleUsage.cpp" />
-    <ClCompile Include="test_raycasting.cpp" />
+    <ClCompile Include="Sample_Raycasting.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
