Added Basic Search and removed unnecessary files

--- a/Sample Usage/AnalysisCInterfaceSampleUsage/Sample_BasicSearchOnGraph.vcxproj.filters
+++ b/Sample Usage/AnalysisCInterfaceSampleUsage/Sample_BasicSearchOnGraph.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Sample_Raycasting.cpp">
+    <ClCompile Include="Sample_BasicSearchOnGraph.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
