--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,5 @@
 *.testlog filter=lfs diff=lfs merge=lfs -text
 *.ipch filter=lfs diff=lfs merge=lfs -text
 *.db filter=lfs diff=lfs merge=lfs -text
+*.objbak filter=lfs diff=lfs merge=lfs -text
+*.json filter=lfs diff=lfs merge=lfs -text
