--- a/src/Cpp/raytracer/CMakeLists.txt
+++ b/src/Cpp/raytracer/CMakeLists.txt
@@ -11,7 +11,7 @@ target_sources(
 		src/RayRequest.cpp
 		src/embree_raytracer.h
 		src/RayRequest.h
-	)
+	 "src/nanort.h"  "src/ray_data.h" "src/nanort_raytracer.cpp")
 
 # Just die if we can't find embree for now.
 if(WIN32)
