--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,4 @@
 *.testlog filter=lfs diff=lfs merge=lfs -text
 *.ipch filter=lfs diff=lfs merge=lfs -text
 *.db filter=lfs diff=lfs merge=lfs -text
+*.objbak filter=lfs diff=lfs merge=lfs -text
