--- a/src/Cpp/analysismethods/CMakeLists.txt
+++ b/src/Cpp/analysismethods/CMakeLists.txt
@@ -8,8 +8,7 @@ target_sources(
 		src/unique_queue.h
 		src/graph_generator.h
 		src/graph_generator.cpp
-		src/graph_generator_private.cpp
-		src/graph_generator_private.h
+		src/graph_utils.cpp
 	)
 target_link_libraries(
 	GraphGenerator
