Added embree_raytracer_cinterface.cpp to CMakeLists.txt
This adds back embree_raytracer_cinterface.cpp to CMakeLists.txt.
embree_raytracer_cinterface.cpp contains the tested snippets for
raytracer_C.h

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -410,6 +410,7 @@ if(HumanFactors_EnableTests)
 					${C_TEST_DRIVER_DIR}/GraphAlgorithms.cpp
 					${C_TEST_DRIVER_DIR}/CostAlgorithms.cpp
 					${C_TEST_DRIVER_DIR}/GraphGenerator.cpp
+					${C_TEST_DRIVER_DIR}/embree_raytracer_cinterface.cpp
 		)
 	elseif(${HumanFactors_Config} STREQUAL "RayTracer")
 		target_sources(
