--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ src/Python/.vscode
 out_vg_score.json
 Sample Usage/AnalysisCInterfaceSampleUsage/.vs/
 Sample Usage/AnalysisCInterfaceSampleUsage/x64
+Analysis Project Template/HumanFactorsSamples/.vs
+Analysis Project Template/HumanFactorsSamples/x64
