--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,5 @@
 *.obj filter=lfs diff=lfs merge=lfs -text
 *.testlog filter=lfs diff=lfs merge=lfs -text
 *.ipch filter=lfs diff=lfs merge=lfs -text
+*.db filter=lfs diff=lfs merge=lfs -text
+*.objbak filter=lfs diff=lfs merge=lfs -text
