Add C# Example directory and cmake structure
This should make future single file examples easier to produce.

--- a/src/Csharp/CMakeLists.txt
+++ b/src/Csharp/CMakeLists.txt
@@ -94,3 +94,7 @@ set_target_properties(
 install(TARGETS hfcsharptest EXPORT hfcsharptest RUNTIME DESTINATION bin)
 
 
+if (HumanFactors_BuildCSharpTests)
+	add_subdirectory(Examples)
+endif()
+
