--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -54,7 +54,7 @@ set(CMAKE_CXX_FLAGS "/EHsc /MP")
 option(HumanFactors_EnableTests "Install unit tests to the bin directory" ON)
 option(HumanFactors_EnableCSharp "Include C# Interface" ON)
 option(HumanFactors_EnablePython "Include Python Interface" ON)
-option(HumanFactors_BuildCSharpTests "Enable to build C# test projects" ON)
+option(HumanFactors_BuildCSharpTests "Enable to build C# test projects" OFF)
 set(HumanFactors_InstallTitle "" CACHE STRING "Installed package will be written to release/<InstallTitle>/. An empty string will follow default behavior.")
 set(HumanFactors_Config "GraphGenerator" CACHE STRING "What projects to build")
 set(EXTERNAL_DIR "${CMAKE_SOURCE_DIR}\\external")
