Restructuring for MultiRT
- Create new cpp/h files for hitstruct. 
- Add a new raytracer MultiRT which can act as both an EmbreeRayTracer an a NanoRTRayTracer depending on what it's constructed with
- Graph Generator now can handle RayTraver, MultiRT, or NanoRT as an input. Internally it converts them to MultiRT.
- Move nanoRT_Data to nanort_raytracer.cpp to solve some  #include problems.

--- a/src/Cpp/raytracer/CMakeLists.txt
+++ b/src/Cpp/raytracer/CMakeLists.txt
@@ -11,7 +11,14 @@ target_sources(
 		src/RayRequest.cpp
 		src/embree_raytracer.h
 		src/RayRequest.h
-	 "src/nanort.h"  "src/ray_data.h" "src/nanort_raytracer.cpp")
+		src/nanort.h
+		src/ray_data.h 
+		src/nanort_raytracer.cpp
+		src/MultiRT.h
+		src/MultiRT.cpp
+		src/HitStruct.cpp
+		src/HitStruct.h
+	)
 
 # Just die if we can't find embree for now.
 if(WIN32)
