--- a/.gitattributes
+++ b/.gitattributes
@@ -6,3 +6,4 @@
 *.db filter=lfs diff=lfs merge=lfs -text
 *.objbak filter=lfs diff=lfs merge=lfs -text
 *.json filter=lfs diff=lfs merge=lfs -text
+*.mov filter=lfs diff=lfs merge=lfs -text
