--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ Analysis Project Template/HumanFactorsSamples/.vs
 Analysis Project Template/HumanFactorsSamples/x64
 py-algs/.vscode/settings.json
 py-algs/database/sql/c_test.db
+src/Python/humanfactorspy/__pycache__/__init__.cpython-38.pyc
