--- a/src/CMakeSettings.json
+++ b/src/CMakeSettings.json
@@ -28,7 +28,7 @@
       "generator": "Visual Studio 16 2019 Win64",
       "configurationType": "RelWithDebInfo",
       "inheritEnvironments": [ "msvc_x64_x64" ],
-      "addressSanitizerEnabled":  true,
+      "addressSanitizerEnabled": true,
       "buildRoot": "${projectDir}\\out\\build\\${name}",
       "installRoot": "${projectDir}\\out\\install\\${name}",
       "cmakeCommandArgs": "",
@@ -65,7 +65,7 @@
         },
         {
           "name": "HumanFactors_EnableTests",
-          "value": "true",
+          "value": "False",
           "type": "BOOL"
         },
         {
@@ -146,7 +146,7 @@
         },
         {
           "name": "HumanFactors_EnableTests",
-          "value": "true",
+          "value": "False",
           "type": "BOOL"
         },
         {
@@ -162,6 +162,11 @@
         {
           "name": "HumanFactors_EnablePython",
           "value": "False",
+          "type": "BOOL"
+        },
+        {
+          "name": "HumanFactors_BuildCSharpTests",
+          "value": "True",
           "type": "BOOL"
         }
       ]
