--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -60,6 +60,6 @@ jobs:
         cd html_build
 
         git add . 
-        git commit -m "ghpages"
+        git commit -m "ghpages for python docs"
         git push 
             
