--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -38,7 +38,8 @@ jobs:
         cmake ./src/ -G"Visual Studio 16 2019" -DCMAKE_GENERATOR_PLATFORM="x64"  -DCMAKE_CONFIGURATION_TYPES="Debug" -DCMAKE_INSTALL_PREFIX=".\..\build\Python" -DHumanFactors_Config="All" -DHumanFactors_EnableTests="False" -DCMAKE_BUILD_TYPE="Debug" -DHumanFactors_EnablePython="True" -DHumanFactors_EnableCSharp="False" -DINSTALL_GTEST="False"  ".\" 2>&1 
     - name: cmake build
       run: |
-        cmake --build ../src
+        ls
+        cmake --build dhart/../src
     - name: cmake Install
       run: |
         cmake --install .
