--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -57,8 +57,9 @@ jobs:
     - name: Build documentation with sphinx
       run: |
         cd "docs/Python Docs"
-        make clean
-        make html
+        ls
+        ./make.bat clean
+        ./make.bat html
         # make latexpdf
         ls
 
