--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -72,7 +72,7 @@ jobs:
         mkdir html_build
         git worktree add -B docs html_build origin/docs
 
-        cp -a docs/. html_build/
+        copy docs/. html_build/
 
         cd html_build
 
