update path for building actions and install examples

--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -64,6 +64,8 @@ jobs:
         # make latexpdf
         cd build
         ls
+        cd html
+        ls
 
     - name: Auto-deploy doc changes
       run : |
