--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -81,6 +81,8 @@ jobs:
 
         cd html_build
         ls 
+        cd docs
+        ls
 
         git add . 
         git commit -m "ghpages for python docs"
