--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -76,7 +76,7 @@ jobs:
         mkdir html_build
         git worktree add -B docs html_build origin/docs
 
-        copy docs/. html_build/ 
+        xcopy /e /s .\docs\ .\html_build\ 
         ls
 
         cd html_build
