--- a/.github/workflows/copy.yml
+++ b/.github/workflows/copy.yml
@@ -39,7 +39,7 @@ jobs:
         git worktree add -B docs html_build origin/docs
 
         ls
-        xcopy /e /s .\docs\ .\html_build\ 
+        robocopy .\contributing-guides\ .\newdocs\ /MIR 
         
         cd html_build
         ls 
