--- a/.github/workflows/copy.yml
+++ b/.github/workflows/copy.yml
@@ -39,8 +39,7 @@ jobs:
         git worktree add -B docs html_build origin/docs
 
         ls
-        robocopy .\contributing-guides\ .\newdocs\ /MIR 
-        
+        robocopy .\docs\ .\html_build\ /MIR
         cd html_build
         ls 
         cd docs
