--- a/.github/workflows/copy.yml
+++ b/.github/workflows/copy.yml
@@ -41,8 +41,9 @@ jobs:
         robocopy .\docs\ .\html_build\ /MIR
         cd html_build
         ls 
+        git worktree list
 
         git add . 
-        git commit -m "ghpages for python docs"
+        git commit -m "ghpages"
         git push 
             
