--- a/.github/workflows/copy.yml
+++ b/.github/workflows/copy.yml
@@ -37,11 +37,8 @@ jobs:
 
         mkdir html_build
 
-        git worktree add -B ghpages html_build origin/ghpages
+        git worktree add -B docs html_build origin/docs
         robocopy .\docs\ .\html_build\ /e
-
-        # git worktree add -B ghpages html_build origin/ghpages
-        # cp -a docs/. html_build/
 
         cd html_build
 
