--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -67,16 +67,17 @@ jobs:
         cd html
         ls
 
+
     - name: Auto-deploy doc changes
       run : |
-
+        
         git config --local user.email "action@github.com"
         git config --local user.name "github-actions[bot]"
 
         mkdir html_build
 
-        git worktree add -B ghpages html_build origin/ghpages
-        robocopy .\docs\ .\html_build\ /MIR
+        git worktree add -B docs html_build origin/docs
+        robocopy .\docs\ .\html_build\ /e
 
         cd html_build
 
@@ -84,5 +85,4 @@ jobs:
         git commit -m "ghpages"
         git push 
             
-
             
