--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -34,7 +34,7 @@ jobs:
 
     - name: Install windows documentation requirements
       run: |
-        choco install doxygen.portable -y
+        winget install -e --id DimitriVanHeesch.Doxygen
         choco install graphviz -y
     
     - name: Setup cmake
